// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`K9BucketPolicy 1`] = `
Object {
  "Resources": Object {
    "S3BucketPolicy189C1E8E": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "TestBucket560B80BC",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:BypassGovernanceRetention",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObject",
                "s3:GetObjectAcl",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTagging",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "Null": Object {
                  "s3:x-amz-server-side-encryption": true,
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnencryptedStorage",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:x-amz-server-side-encryption": "aws:kms",
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyStorageWithoutKMSEncryption",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestBucket560B80BC": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`K9KeyPolicy 1`] = `
Object {
  "Resources": Object {
    "S3BucketPolicy189C1E8E": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "TestBucket560B80BC",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:BypassGovernanceRetention",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObject",
                "s3:GetObjectAcl",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTagging",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Restricted-delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "Null": Object {
                  "s3:x-amz-server-side-encryption": true,
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnencryptedStorage",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:x-amz-server-side-encryption": "aws:kms",
                },
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyStorageWithoutKMSEncryption",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestBucket560B80BC": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "TestKey4CACAF33": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "KeyPolicy": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kms:CancelKeyDeletion",
                "kms:ConnectCustomKeyStore",
                "kms:CreateAlias",
                "kms:CreateCustomKeyStore",
                "kms:CreateGrant",
                "kms:CreateKey",
                "kms:DeleteAlias",
                "kms:DisableKey",
                "kms:DisableKeyRotation",
                "kms:DisconnectCustomKeyStore",
                "kms:EnableKey",
                "kms:EnableKeyRotation",
                "kms:PutKeyPolicy",
                "kms:RetireGrant",
                "kms:RevokeGrant",
                "kms:ScheduleKeyDeletion",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:UpdateCustomKeyStore",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": "*",
              "Sid": "Restricted-administer-resource",
            },
            Object {
              "Action": Array [
                "kms:Decrypt",
                "kms:DescribeCustomKeyStores",
                "kms:DescribeKey",
                "kms:GetKeyPolicy",
                "kms:GetKeyRotationStatus",
                "kms:GetParametersForImport",
                "kms:GetPublicKey",
                "kms:ListAliases",
                "kms:ListGrants",
                "kms:ListKeyPolicies",
                "kms:ListKeys",
                "kms:ListResourceTags",
                "kms:ListRetirableGrants",
                "kms:Verify",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": "*",
              "Sid": "Restricted-read-data",
            },
            Object {
              "Action": Array [
                "kms:Encrypt",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateRandom",
                "kms:ImportKeyMaterial",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:Sign",
                "kms:UpdateAlias",
                "kms:UpdateKeyDescription",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::12345678910:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": "*",
              "Sid": "Restricted-write-data",
            },
            Object {
              "Action": Array [
                "kms:DeleteCustomKeyStore",
                "kms:DeleteImportedKeyMaterial",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": "*",
              "Resource": "*",
              "Sid": "Restricted-delete-data",
            },
            Object {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "AllowRootUserToAdministerKey",
            },
            Object {
              "Action": "kms:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::12345678910:role/app-backend",
                    "arn:aws:iam::12345678910:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "DenyEveryoneElse",
            },
            Object {
              "Action": Array [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
                "kms:GenerateDataKey",
                "kms:TagResource",
                "kms:UntagResource",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
